syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shankarsan.grpc_r2dbc_poc.proto_stubs";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
